--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet'>
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+    <title>Title</title>
 </head>
 <body>
-$END$
+    <header>
+        <div class="container">
+            <h1 class="title">Learning Flask</h1>
+        </div>
+    </header>
+
+    {% block content %}
+
+    {% endblock %}
 </body>
 </html>
