updated layout html page to include login url

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
     <header>
         <div class="container">
             <h1 class="title">Learning Flask</h1>
+            <a href="{{ url_for('login') }}" style="float: right;">Login</a>
         </div>
     </header>
 
