--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,11 @@
     <header>
         <div class="container">
             <h1 class="title">Learning Flask</h1>
-            <a href="{{ url_for('login') }}" style="float: right;">Login</a>
+            {% if 'email' in session %}
+                <a href="{{ url_for('logout') }}" style="float: right;">Logout</a>
+            {% else %}
+                <a href="{{ url_for('login') }}" style="float: right;">Login</a>
+            {% endif %}
         </div>
     </header>
 
